Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136969

qsvgvisitorimpl.cpp:1154:40: error: comparison of integers of different signs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.10.0 Beta3
    • 6.10
    • Quick: Other
    • None
    • Android, Linux/Other display system
    • 6864d9a1b (dev)
    • 2025wk20s1QtforAndroid

      Error

      Run into compilation error when building Android developer build on dev for all the module

      /home/ramipotinkara/dev/envs/qt610_16052025/qt6/qtdeclarative/src/quickvectorimage/generator/qsvgvisitorimpl.cpp:1154:40: error: comparison of integers of different signs: 'qsizetype' (aka 'int') and 'quint32' (aka 'unsigned int') [-Werror,-Wsign-compare]
       1154 |             Q_ASSERT(components.size() >= transformProperty->transformCount());
            |                      ~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /home/ramipotinkara/dev/envs/qt610_16052025/qt6/qtbase/src/corelib/global/qassert.h:31:30: note: expanded from macro 'Q_ASSERT'
         31 | #    define Q_ASSERT(cond) ((cond) ? static_cast<void>(0) : QT_PREPEND_NAMESPACE(qt_assert)(#cond, _FILE, __LINE_))
            |                              ^~~~
      1 error generated.

      Used env

      • Qt dev got on 16th of May 2025
      • Target architecture: x86
      • Host: Linux Ubuntu 24.04
      • NDK: NDK29 Beta-1 from QTBUG-132640 

      Plausible reason

      • Call Q_ASSERT with similar signature integers

      Fix proposal

      • Fox example q20::cmp_less

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rampe Rami Potinkara
            rampe Rami Potinkara
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes