Android: fix comparison of different signed integers

This patch fixes the comparison of different signed
integers on Android x86 architecture. Fix introduces
q20::cmp_greater_equal to be used.

Fixes: QTBUG-136969
Change-Id: I6ec17c3604b82266cfd7a68f7f5505360b6a65c6
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>